--- a/client/index.html
+++ b/client/index.html
@@ -14,15 +14,15 @@
     <header>
       <div class="dallasStars">
         <img id= "ds" src="https://upload.wikimedia.org/wikipedia/en/thumb/c/ce/Dallas_Stars_logo_%282013%29.svg/1200px-Dallas_Stars_logo_%282013%29.svg.png" >
-      </header>
+    </header>
 
       <main>
-        <h1 id="players">Dallas Stars Players</h1>
-        <div>
+        <div id="player-input">
           <form>
-            <input type="text"placeholder="Enter player name" >
-            <div id="box">
-              <ul id="player-list">
+            <input type="text"placeholder="Enter player name">
+            <div id="player-box">
+              <label for="player-list">Players</label>
+              <ul name ="player-list">
                 
               </ul>
             </div>
